--- a/index.html
+++ b/index.html
@@ -39,28 +39,30 @@
 			
 			<div class="panel panel-default">
 				<div class= "panel-body">
-					<h4 id = "firstbox">Number to match: <span id= "number"></span></h4>
-					<h4 id = "secondbox">Your score: <span id="score"></span></h4>
+					<h4>Number to match: <span id= "number"></span></h4>
+					<h4>Your score: <span id="score"></span></h4>
 				</div>
 			</div>
 
 			<div class="panel panel-default">
 				<div class= "panel-body">
-					<img src="assets/images/image1.png" class=Jewel id='red'>
-					<img src="assets/images/image2.png" class=Jewel id='blue'>
-					<img src="assets/images/image3.png" class=Jewel id= 'green'>
-					<img src="assets/images/image4.png" class=Jewel id= 'yellow'>
+					<img src="assets/images/gam.png" class=Jewel id='red'>
+					<img src="assets/images/pinkgem.png" class=Jewel id='blue'>
+					<img src="assets/images/purplegem.png" class=Jewel id= 'green'>
+					<img src="assets/images/roundgem.png" class=Jewel id= 'yellow'>
 				</div>
 			</div>
 			
 			<div class="panel panel-default">
 				<div class="panel-body">
-					<h4 id = "firstbox">Wins: <span id= "wins"></span></h4>
-					<h4 id = "secondbox">Losses: <span id= "losses"></span></h4>
-				</div>
-				 <div id="buttons">
+					<h4>Wins: <span id= "wins"></span></h4>
+					<h4>Losses: <span id= "losses"></span></h4>
+					
+					<div id="button">
       				<button id="reset"><h2>Reset</h2></button>
-    			</div>
+    				</div>
+				</div>
+				
 			</div>
 		</div>
 		
